Wed Jun 30 22:29:51 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* docs/releasenotes/switch.html:
	* docs/releasenotes/index.html:
          Updated the release note. I will work on the to-do list
	  as well.

Wed Jun 30 18:01:58 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/ServantSourceGenerator.cpp:

	  Fixed another bug in the receptacle code generation. Thanks to
	  Gary Duzan for reporting the problem <gduzan at bbn dot com>.

Wed Jun 30 17:16:53 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.tpp:

          Added code to catch DOM exceptions.

Wed Jun 30 17:00:10 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:
        * DnC/RepositoryManager/RepositoryManager_Impl.h:
        * DnC/RepositoryManager/Repository_Manager.cpp:

          Added code to catch parser exceptions for
          incorrect URls

Wed Jun 30 13:32:08 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/tests/NodeApplicationTest/NodeAppTest.mpc:

	  Removed "after += CIAO_DnC_Container" from the stub project.

Wed Jun 30 13:14:50 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/ciao/CCM_Core.mpc:

	  Added -St to Deployment_stub probject to reduce the size of
	  generated code.

Wed Jun 30 10:59:55 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIAO.mwc:
	* CIAOTAO.mwc:

	  Added the new DnC directories.

	* DnC/ciao/CCM_Core.mpc:

	  Changed the name of the libraries generated. We should not
	  overwrite the original ones.

	* DnC/Config_Handlers/Config_Handlers.mpc:
	* DnC/DomainApplicationManager/DomainApplicationManager.mpc:
	* DnC/ExecutionManager/ExecutionManager.mpc:
	* DnC/NodeApplication/NodeApplication.mpc:
	* DnC/NodeApplicationManager/NodeApplicationManager.mpc:
	* DnC/NodeManager/NodeDaemon.mpc:
	* DnC/RepositoryManager/RepositoryManager.mpc:
	* DnC/tests/NodeApplicationTest/NodeAppTest.mpc:

	  Use the new libraries.
