@@ -1,3 +1,10 @@
+Thu Jul  1 10:56:28 2004  Tao Lu  <lu@dre.vanderbilt.edu>
+
+	* docs/releasenotes/index.html:
+	* docs/todo.html:
+
+	  Updated the todo list.
+
 Wed Jun 30 22:29:51 2004  Tao Lu  <lu@dre.vanderbilt.edu>
 
 	* docs/releasenotes/switch.html:
